2012-06-21 Aurelien GRAYO  <aurelien@in-cite.net>
	* Release of ics_od_stores_rel 1.0.3 on TER

2012-03-23 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Fix: update autoload
	* Version changed to 1.0.2

2011-05-13 In Cité Solution  <technique@in-cite.net>

	* initial code generated with kickstarter