@@ -1,3 +1,6 @@
+2014-03-03 Emilie Sagniez  <emilie.sagniez@plan-net.fr>
+	* Add "implode" control before request
+
 2012-06-21 Aurelien GRAYO  <aurelien@in-cite.net>
 	* Release of ics_od_stores_rel 1.0.3 on TER
 
